# hyprspot

./: .gitignore  Makefile  hyprpm.toml  meson.build
src/: main.cpp
